fixed nowrap downloads

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -150,7 +150,6 @@ body {
     font-size: 22px;
     letter-spacing: 0;
     display: flex;
-    white-space: nowrap;
     font-weight: bold;
     margin-bottom: 5px;
 }
